Add updated index 11-11

--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
             </div>
         </div>
 
+        <div class="section">
+            <h2>Soziale Gerechtigkeit</h2>
+            <div class="resource-grid">
+                <a href="soziale_gerechtigkeit_flashcards.html" class="resource-card">
+                    <div class="resource-title">
+                        <span class="resource-icon">🎴</span>
+                        Flashcards: Soziale Gerechtigkeit
+                    </div>
+                    <div class="resource-description">
+                        20 Flashcards auf Deutsch zu wichtigen Begriffen wie Chancengerechtigkeit, Bildungsgerechtigkeit, demografischer Wandel, Solidarprinzip und mehr. Mit Definitionen, Beispielen aus Deutschland und Lern-Tracking.
+                    </div>
+                </a>
+            </div>
+        </div>
+
         <div class="footer">
             <p>All materials work offline once loaded • No installation required</p>
         </div>
