Add updated index 12-11

--- a/index.html
+++ b/index.html
@@ -208,6 +208,21 @@
             </div>
         </div>
 
+        <div class="section">
+            <h2>The Vanishing Half by Brit Bennett</h2>
+            <div class="resource-grid">
+                <a href="vanishing_half_matching.html" class="resource-card">
+                    <div class="resource-title">
+                        <span class="resource-icon">🎯</span>
+                        Matching Exercise 1
+                    </div>
+                    <div class="resource-description">
+                        Drag-and-drop matching exercise with 20 statements about themes, characters, and symbolism in "The Vanishing Half". Match sentence beginnings with their correct endings. Features shuffle mode and automatic scoring.
+                    </div>
+                </a>
+            </div>
+        </div>
+
         <div class="footer">
             <p>All materials work offline once loaded • No installation required</p>
         </div>
